Devices in the 'Select Capture Devices' wizard pane now appear in a fixed height div, with a scrollbar when needed.

--- a/platform/ui/styles/default.css
+++ b/platform/ui/styles/default.css
@@ -163,6 +163,11 @@ h1.wizard_welcome {
 	margin-top: 20px;
 }
 
+#wizard .device_list {
+	height: 225px;
+	overflow: auto;
+}
+
 #review_setup input {
 	width: 95%;
 }
